Clarify the exit docstring.